# linear-algebra

./: .gitignore  CMakeLists.txt  PROGRESS.md  README.md  shell.nix
data/: eigen_matrix.txt  least_squares_A.txt  least_squares_b.txt  linear_system_A.txt  linear_system_b.txt  matrix_a.txt  matrix_b.txt  perf_matrix_a.txt  perf_matrix_b.txt  sample_image.pgm  vector_a.txt  vector_b.txt
demo/: main.cpp
include/: basic_algebra.hpp  gpu_acceleration.hpp  image_processing.hpp  linear.hpp  linear_algebra.hpp  utils.hpp
src/: basic_algebra.cpp  final_demo.cpp  menu_demo.cpp
