cmake_minimum_required(VERSION 3.16)

project(linear-algebra)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_library(LinearAlgebra INTERFACE)
add_library(BasicAlgebra INTERFACE)
add_library(Utils INTERFACE)
add_library(ImageProcessing INTERFACE)
add_library(GPUAcceleration INTERFACE)
target_include_directories(BasicAlgebra INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(LinearAlgebra INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(Utils INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(ImageProcessing INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(GPUAcceleration INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(BasicAlgebra INTERFACE Utils)
target_link_libraries(LinearAlgebra INTERFACE BasicAlgebra)
target_link_libraries(ImageProcessing INTERFACE LinearAlgebra)
target_link_libraries(GPUAcceleration INTERFACE ImageProcessing)

find_package(OpenCV QUIET)
if(OpenCV_FOUND)
  target_compile_definitions(ImageProcessing INTERFACE LINEAR_ALGEBRA_HAS_OPENCV=1)
  target_include_directories(ImageProcessing INTERFACE ${OpenCV_INCLUDE_DIRS})
  target_link_libraries(ImageProcessing INTERFACE ${OpenCV_LIBS})
endif()

find_package(OpenCL QUIET)
if(OpenCL_FOUND)
  target_compile_definitions(GPUAcceleration INTERFACE LINEAR_ALGEBRA_HAS_OPENCL=1)
  target_include_directories(GPUAcceleration INTERFACE ${OpenCL_INCLUDE_DIRS})
  target_link_libraries(GPUAcceleration INTERFACE ${OpenCL_LIBRARIES})
endif()

add_executable(test src/final_demo.cpp)
target_link_libraries(test BasicAlgebra LinearAlgebra ImageProcessing GPUAcceleration)
